k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: em-auth
  labels:
    name: em-auth
    environment: production
