k3s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: em-auth
  labels:
    app: nginx
    component: reverse-proxy
spec:
  type: ClusterIP
  selector:
    app: nginx
    component: reverse-proxy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
